<resources>
    <string name="app_name">Latte</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="SignUp">SignUp</string>
    <string name="signup_here">SignUp Here</string>
    <string name="go_back_to_login">Go Back to Login</string>
    <string name="task_manager">Task Manager</string>
    <string name="timetable">Timetable</string>
    <string name="exit">Exit</string>
    <string name="welcome_to_study_planner">Welcome to Study Planner</string>
    <string name="add_task">Add Task</string>
    <string name="click_to_pin">Click to Pin</string>
    <string name="reports_screen">Reports Screen</string>
    <string name="reports">Reports</string>
    <string name="string_go_back">string/Go Back</string>
    <string name="go_back">Go Back</string>
    <string name="go_backbtnForReport">Go Back</string>
    <string name="go_back_btn_from_taskmanager">Go Back</string>
    <string name="_from_taskmanager_to_mainactivity">Go Back</string>
    <string name="remove_project">Remove Project</string>
    <string name="go_back_from_taskm">Go Back</string>
    <string name="add_projects">Add Projects</string>
    <string name="task_manager_screen">Task Manager Screen</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="task_description_add">Task Description</string>
    <string name="save_task_add">Save Task</string>
    <string name="task_title_edit">Task Title</string>
    <string name="menu_item_icon">menu_item_icon</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="menu_item_title">menu_item_title</string>
    <string name="menu_item">Menu Item</string>
</resources>